k8s/overlays/local/keycloak-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: open-analyst
spec:
  template:
    spec:
      containers:
        - name: keycloak
          args: ["start-dev", "--import-realm"]
